objects/OperationHistoryPeriod__c.object
<CustomObject>
    <fields>
        <fullName>ActualHours__c</fullName>
        <label>実働時間</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Break__c</fullName>
        <label>休憩</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CallCenterReceptionNumber__c</fullName>
        <label>コールセンター受付番号</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceNumber__c</fullName>
        <label>対応番号</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreateDateTime__c</fullName>
        <label>登録日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CreateUserCode__c</fullName>
        <label>登録者コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch__c</fullName>
        <label>派遣</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EndTime__c</fullName>
        <label>終了時刻</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <label>対応区分</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LinkKey__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>連携キー</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>機種</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MonthDay__c</fullName>
        <label>月日</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>備考</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfPeople__c</fullName>
        <label>人数</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OperationHistory__c</fullName>
        <label>対応履歴</label>
        <referenceTo>OperationHistory__c</referenceTo>
        <relationshipLabel>作業時間</relationshipLabel>
        <relationshipName>OperationHistoryPeriod</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>製番</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RequestContents__c</fullName>
        <label>依頼内容</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SerialNo__c</fullName>
        <label>連番</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <label>サービス種別</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartTime__c</fullName>
        <label>開始時刻</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>時間</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UnitBody__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>本体号機</label>
        <referenceTo>UnitBody__c</referenceTo>
        <relationshipLabel>作業時間</relationshipLabel>
        <relationshipName>OperationHistoryPeriod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UpdateDateTime__c</fullName>
        <label>更新日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UpdateUserCode__c</fullName>
        <label>更新者コード</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkDivision__c</fullName>
        <label>作業区分</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>作業時間</label>
    <listViews>
        <fullName>All</fullName>
        <columns>CallCenterReceptionNumber__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>作業時間 Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>